FEAT: Add validate for auth , server , user
